--- a/server/package.json
+++ b/server/package.json
@@ -9,7 +9,9 @@
     "express": "^4.16.2",
     "graphql": "^0.11.7",
     "graphql-tools": "^2.10.0",
-    "nodemon": "^1.12.1"
+    "mysql2": "^1.5.1",
+    "nodemon": "^1.12.1",
+    "sequelize": "^4.23.2"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
