--- a/server/package.json
+++ b/server/package.json
@@ -5,13 +5,18 @@
   "main": "index.js",
   "dependencies": {
     "apollo-server-express": "^1.2.0",
+    "bcrypt": "^1.0.3",
     "body-parser": "^1.18.2",
+    "cors": "^2.8.4",
     "express": "^4.16.2",
     "graphql": "^0.11.7",
     "graphql-tools": "^2.10.0",
+    "jsonwebtoken": "^8.1.0",
+    "lodash": "^4.17.4",
     "mysql2": "^1.5.1",
     "nodemon": "^1.12.1",
-    "sequelize": "^4.23.2"
+    "sequelize": "^4.23.2",
+    "typescript": "^2.6.2"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
